--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "awesome-mask": "^1.1.1",
     "chai-sorted": "^0.1.0",
     "npm": "^5.6.0",
     "vue": "^2.5.2",
