--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "awesome-mask": "^1.1.1",
+    "babel-polyfill": "^6.26.0",
     "chai-sorted": "^0.1.0",
+    "es6-promise": "^4.2.4",
     "npm": "^5.6.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.4.0",
